--- a/.github/workflows/build-openwrt.yml
+++ b/.github/workflows/build-openwrt.yml
@@ -8,8 +8,8 @@
 name: Build OpenWrt
 
 on: 
-  release:
-    types: [published]
+#  release:
+#    types: [published]
   push:
     branches: 
       - master
